--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:5Hl4n/8GqcKDocxCZf0lP0IxzaZYBuFVE8DExEjXkHk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
