--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,18 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:5Hl4n/8GqcKDocxCZf0lP0IxzaZYBuFVE8DExEjXkHk=
+APP_KEY=base64:SZxmlgVqH50KrXLAU5tam8nzDBenYkHANpqJDtLf+ZU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
+L5_SWAGGER_CONST_HOST=http://localhost/
+
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
@@ -29,7 +32,7 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
+MAIL_HOST=mailhog
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
@@ -56,3 +59,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+GOOGLE_MAP_KEY="AIzaSyCn9l1Y_XEDs1VRLlsMjzp7tDsFrlsD6qA"
