--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
-        "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "alpinejs": "^3.12.0",
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
+        "laravel-vite": "^0.0.24",
         "laravel-vite-plugin": "^0.7.2",
-        "postcss": "^8.4.6",
-        "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0"
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.7",
+        "vite": "^4.1.4"
     }
 }
